# BuildingSimulation

./: .gitignore  CMakeLists.txt  ObjectPaths.txt  README.md
Objects/: cottage_obj.mtl
Objects/Cottage/: cottage_obj.mtl
Objects/Penguin/: PenguinBaseMesh.mtl
Objects/Tree/: Tree1 2.mtl
include/: CheckError.h
shaders/: depth_fshader.glsl  depth_vshader.glsl  dummy_frag.glsl  dummy_vert.glsl  fshader.glsl  fshader2.glsl  ui_vertex.glsl  vshader.glsl  vshader2.glsl  water_frag.glsl  water_vert.glsl
src/: main.cpp
src/Core/: AudioManager.cpp  AudioManager.h  Camera.cpp  Camera.h  CelestialLightManager.cpp  CelestialLightManager.h  Material.h  ObjectConfig.cpp  ObjectConfig.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShadowMap.cpp  ShadowMap.h  Texture.cpp  Texture.h  Window.cpp  Window.h  light.cpp  light.h  stb_image_impl.cpp
src/Grid/: BaseGrid.cpp  BaseGrid.h  FlatGrid.cpp  FlatGrid.h  GridMesh.cpp  GridMesh.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainGrid.cpp  TerrainGrid.h
src/ObjectLoader/: GameObject.cpp  GameObject.h  GameObjectManager 2.cpp  GameObjectManager 2.h  GameObjectManager.cpp  GameObjectManager.h  ObjectLoader.cpp  ObjectLoader.h
src/UI/: UIButton.cpp  UIButton.h  UIDropdownMenu.cpp  UIDropdownMenu.h  UIElement.cpp  UIElement.h  UIRenderer.cpp  UIRenderer.h
src/Water/: Lake.h  Water.cpp  Water.h  WaterManager.cpp  WaterManager.h  WaterRenderer.cpp  WaterRenderer.h
